<resources>
    <string name="app_name">enjoyD</string>

    <string name="kakao_app_key">78cddb09932cc648839f9f20cccdd872</string>
    <string name="kakao_scheme">kakao78cddb09932cc648839f9f20cccdd872</string>
    <string name="kakaolink_host">kakaolink</string>

    <string name="kakao_login_title">Kakaotalk 계정으로 로그인하기</string>

    <string name="connection_failed">연결에 실패했습니다.\n잠시 후 다시 시도해주세요.</string>

    <!-- 회원가입 (Sign up) -->
    <string name="user_name_input_hint">이름 (닉네임)</string>
    <string name="user_name_warning_text">이름을 입력해주세요.</string>
    <string name="user_birthday_input_hint">생년월일</string>
    <string name="user_birthday_warning_text">생년월일을 형식에 맞게 입력해주세요.</string>
    <string name="user_gender_warning_text">성별을 선택해주세요.</string>
    <string name="user_job_input_hint">직업</string>
    <string name="user_job_warning_text">직업을 선택해주세요.</string>
    <string name="user_detail_job_warning_text">직업을 입력해주세요.</string>
    <string name="sign_up">회원가입</string>

    <!-- 요약 평가하기 (Summary Evaluation) -->
    <string name="evaluation_complete">평가 완료</string>


    <!-- 공통 (common) -->
    <string name="man">남자</string>
    <string name="woman">여자</string>
    <string name="not_selected">선택안함</string>
    <string name="student">학생</string>
    <string name="office_workers">직장인</string>
    <string name="etc">기타</string>
    <string name="skip">SKIP</string>
    <string name="home">홈</string>
    <string name="evaluation">평가</string>
    <string name="my_page">마이페이지</string>
    <string name="view_all">전체보기</string>
    <string name="dramas_episode_title_format">EP.%02d %s</string>

    <!-- 메인 (Main) -->
    <string name="screen_title">Enjoy:D</string>

    <!-- 홈 (Home) -->
    <string name="dramas_view_more_text">%s 장르 더보기</string>

    <!-- 마이페이지 (MyPage) -->
    <string name="user_name_format">%s 님</string>
    <string name="inquire_edit_text_hint">보고싶은 웹 드라마를 요청해보세요.</string>
    <string name="send_feedback">등록</string>
    <string name="first_tab_title_format">찜한/목록  %d</string>

    <!-- 상세 (common) -->
    <string name="detail_avg_rating">%.1f</string>
    <string name="detail_other_title">다른 회차 둘러보기</string>
    <string name="detail_rel_title">연관 드라마</string>
    <string name="detail_share_image_upload_fail">공유할 이미지가 없거나 업로드를 실패하였습니다.</string>
    <string name="detail_share_fail">공유를 실패하였습니다.</string>

    <!-- 에러 관련 -->
    <string name="network_disconnected_notice">네트워크 상태를 확인해주세요.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
